@@ -59,26 +59,6 @@ namespace miosix {
 //#define SCHED_TYPE_EDF
 
 //
-//Options specific to the control scheduler
-//
-
-///Instead of fixing a round time the current policy is to have
-///roundTime=bNominal * numThreads, where bNominal is the nominal thread burst
-static const int bNominal=static_cast<int>(AUX_TIMER_CLOCK*0.004);// 4ms
-
-///minimum burst time (to avoid inefficiency caused by context switch
-///time longer than burst time)
-static const int bMin=static_cast<int>(AUX_TIMER_CLOCK*0.0002);// 200us
-
-///maximum burst time (to avoid losing responsiveness/timer overflow)
-static const int bMax=static_cast<int>(AUX_TIMER_CLOCK*0.05);// 50ms
-
-///idle thread has a fixed burst length that can be modified here
-///it is recomended to leave it to a high value, but that does not cause
-///overflow of the auxiliary timer
-static const int bIdle=static_cast<int>(AUX_TIMER_CLOCK*0.5);// 500ms
-
-//
 // Filesystem options
 //
 
